--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <label for="crush-name">Crush's Name:</label>
             <input type="text" id="crush-name" name="crush-name"><br><br>
             </div>
-            <button id="calculate">Calculate</button>
+            <button id="calculate"  onclick="alert(`GenZ people are unpredictable`)">Calculate</button>
 
             <h2 id="result-message"></h2>
             <p id="result-percentage"></p>
